create feature Category.java,CategoryRepo CategoryService.java, CategoryController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=9596
+spring.datasource.url=jdbc:postgresql://localhost:5432/eCommerce
+spring.datasource.username=postgres
+spring.datasource.password=oandsandn312
+spring.jpa.hibernate.ddl-auto=update
